--- a/SWD62AEP2024/Presentation/Views/Students/List.cshtml
+++ b/SWD62AEP2024/Presentation/Views/Students/List.cshtml
@@ -1,7 +1,30 @@
-﻿
+﻿@model IEnumerable<Domain.Models.Student>
+
 @{
     ViewData["Title"] = "List";
 }
 
 <h1>List</h1>
+
+<div class="row">
+    @foreach (var student in Model)
+    {
+        <div class="col-md-4 mb-4">
+            <div class="card w-100">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">@student.FirstName&nbsp;@student.LastName</h5>
+                    <p class="card-text">
+                        ID Card: @student.IdCard<br />
+                        Group: @student.Group.Code<br />
+                        Programme: @student.Group.Programme<br />
+                    </p>
+                    <a href="#" class="btn btn-primary">Update Details</a>
+                    <a href="#" class="btn btn-primary">Allocate to Group</a>
+                    <a href="#" class="btn btn-primary">Delete Student</a>
+                </div>
+            </div>
+        </div>
+    }
+</div>
 
