Implemented Update Student

--- a/SWD62AEP2024/Presentation/Views/Students/List.cshtml
+++ b/SWD62AEP2024/Presentation/Views/Students/List.cshtml
@@ -19,8 +19,8 @@
                         Group: @student.Group.Code<br />
                         Programme: @student.Group.Programme<br />
                     </p>
-                    <a href="#" class="btn btn-primary">Update Details</a>
-                    <a href="#" class="btn btn-primary">Allocate to Group</a>
+                    <a href="/students/Edit/@student.IdCard" class="btn btn-primary">Update Details</a>
+                    &nbsp;
                     <a href="#" class="btn btn-primary">Delete Student</a>
                 </div>
             </div>
