Added Create Student Page

--- a/SWD62AEP2024/Presentation/Views/Shared/_Layout.cshtml
+++ b/SWD62AEP2024/Presentation/Views/Shared/_Layout.cshtml
@@ -33,6 +33,21 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+
+            @if (TempData["Error"] != null)
+            {
+                <div class="alert alert-danger" role="alert">
+                    @TempData["Error"]
+                </div>
+            }
+
+            @if (TempData["Message"] != null)
+            {
+                <div class="alert alert-primary" role="alert">
+                    @TempData["Message"]
+                </div>
+            }
+
             @RenderBody()
         </main>
     </div>
@@ -45,6 +60,14 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script>
+        setTimeout(function () {
+           var alerts = document.querySelectorAll("alert");
+           alerts.forEach(function (alert) {
+                alert.style.display = "none";
+              });
+        }, 5000);
+    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
