--- a/SWD62AEP2024/Presentation/Views/Shared/_Layout.cshtml
+++ b/SWD62AEP2024/Presentation/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script>
         setTimeout(function () {
-           var alerts = document.querySelectorAll("alert");
+           var alerts = document.querySelectorAll(".alert");
            alerts.forEach(function (alert) {
                 alert.style.display = "none";
               });
