Implemented saving of images for students in Create and Update

--- a/SWD62AEP2024/Presentation/Views/Students/List.cshtml
+++ b/SWD62AEP2024/Presentation/Views/Students/List.cshtml
@@ -11,7 +11,7 @@
     {
         <div class="col-md-4 mb-4">
             <div class="card w-100">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img height="200" class="card-img-top" src="@student.ImagePath" alt="@student.FirstName @student.LastName" />
                 <div class="card-body">
                     <h5 class="card-title">@student.FirstName&nbsp;@student.LastName</h5>
                     <p class="card-text">
