--- a/SWD62AEP2024/Presentation/Views/Students/Create.cshtml
+++ b/SWD62AEP2024/Presentation/Views/Students/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" method="post">
+        <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Student.FirstName" class="control-label"></label>
@@ -33,6 +33,11 @@
                     }
                 </select>
                 <span asp-validation-for="Student.GroupFK" class="text-danger"></span>
+            </div>
+            <br />
+            <div class="form-group">
+                <label class="control-label">Upload file</label>
+                <input name="File" type="file" class="form-control"/>
             </div>
             <br />
             <div class="form-group">
