--- a/SWD62AEP2024/Presentation/Views/Students/Edit.cshtml
+++ b/SWD62AEP2024/Presentation/Views/Students/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Update" method="post">
+        <form asp-action="Update" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="IdCard" class="control-label"></label>
@@ -34,6 +34,11 @@
                 <label asp-for="GroupFK" class="control-label"></label>
                 <input asp-for="GroupFK" name="GroupFK" class="form-control" value="@Model.GroupFK"/>
                 <span asp-validation-for="GroupFK" class="text-danger"></span>
+            </div>
+            <br />
+            <div class="form-group">
+                <label class="control-label">Upload file</label>
+                <input name="File" type="file" class="form-control"/>
             </div>
             <br />
             <div class="form-group">
