--- a/SWD62AEP2024/Presentation/Views/Attendance/Create.cshtml
+++ b/SWD62AEP2024/Presentation/Views/Attendance/Create.cshtml
@@ -18,7 +18,10 @@
 <hr />
 
 <form method="post" action="/Attendance/Create">
-
+    @if (ViewBag.update != null)
+    {
+        <input type="hidden" name="update" value="@ViewBag.update" />
+    }
     <!--<input type="hidden" value="@Model.SubjectCode" name="subjectCode" />-->
     <input type="hidden" value="@Model.GroupCode" name="groupCode" />
 
@@ -43,21 +46,25 @@
                     <td class="text-center">
                         <input type="hidden" name="attendances[@s].SubjectFK" value="@Model.SubjectCode" />
                         <input type="hidden" value="@student.IdCard" name="attendances[@s].StudentFK" />
-                        @if (Model.Presence.Count > 0)
+                        <input type="hidden" name="attendances.Attendances[@s].Id" value="@Model.Attendances[s].Id" />
+                        @if (Model.Attendances.Count > 0)
                         {
-                            if (Model.Presence[s] == true)
+                            //View\Edit attendance
+                            if (Model.Attendances[s].IsPresent == true)
                             {
-                                <input type="checkbox" name="attendances[@s].IsPresent" checked class="form-check-input" />
+                                <input type="checkbox" name="attendances[@s].IsPresent" value="true" checked class="form-check-input" />
 
-                            }else
+                            }
+                            else
                             {
-                                <input type="checkbox" name="attendances[@s].IsPresent" class="form-check-input" />
+                                <input type="checkbox" name="attendances[@s].IsPresent" value="true" class="form-check-input" />
 
                             }
                         }
                         else
                         {
-                            <input type="checkbox" name="attendances[@s].IsPresent" checked class="form-check-input" />
+                            //Create a new attendance
+                            <input type="checkbox" name="attendances[@s].IsPresent" value="true" checked class="form-check-input" />
                         }
 
 
