--- a/SWD62AEP2024/Presentation/Views/Attendance/Index.cshtml
+++ b/SWD62AEP2024/Presentation/Views/Attendance/Index.cshtml
@@ -31,7 +31,7 @@
                     <td>@attendance.SubjectName</td>
                     <td>@attendance.GroupCode</td>
                     <td>
-                        <button type="submit" class="btn btn-primary" style="height:fit-content; margin-top:5px" name="attendanceButton" value="@attendance.Date|@attendance.SubjectCode|@attendance.GroupCode">Edit Attendance</button>
+                        <button type="submit" class="btn btn-primary" style="height:fit-content; margin-top:5px; margin-left:20px" name="attendanceButton" value="@attendance.Date|@attendance.SubjectCode|@attendance.GroupCode">Edit Attendance</button>
                     </td>
                 </tr>
             }
