Implemented Login and Register

--- a/SWD62AEP2024/Presentation/Views/Shared/_LoginPartial.cshtml
+++ b/SWD62AEP2024/Presentation/Views/Shared/_LoginPartial.cshtml
@@ -1,10 +1,15 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using Domain.Models
+@inject SignInManager<CustomUser> SignInManager
+@inject UserManager<CustomUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
+        var email = User.Identity.Name;
+        var user = await (UserManager.FindByEmailAsync(email));
+        var firstName = user.FirstName;
+
     <li class="nav-item">
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
     </li>
